Updated to latest Java version. Fixed deprecations. Removed ant build